# pfas_app_1

./: .gitignore  README.md  pyproject.toml
assets/: nist_pfas_suspect_list.csv
docs/: USER_MANUAL_KR.md
scripts/: build_pyinstaller.py
src/onfra_pfas/: __init__.py
src/onfra_pfas/app/: __init__.py  main.py  splash.py
src/onfra_pfas/app/tabs/: __init__.py  feature_tab.py  ml_tab.py  prioritize_tab.py  viz_tab.py
src/onfra_pfas/core/: __init__.py  backend.py  checkpoints.py  confidence.py  config.py  dataset_builder.py  errors.py  featurefinding.py  io_mzml.py  logging.py  ml_inference.py  pfas_prioritization.py  quant.py  utils.py  visualization.py
tests/: __init__.py  test_backend.py  test_confidence.py  test_config.py  test_dataset_builder.py  test_ml_inference.py  test_prioritization_math.py  test_quant.py
